# thor-shipping-dashboard

./: README.md  pyproject.toml
data/: shipping_progress.json
thor_shipping_dashboard/: __init__.py  app.py  scrape.py
